ajuste de estilos para modal y h2 de proyectos

--- a/style.css
+++ b/style.css
@@ -337,10 +337,6 @@ body{
     to { opacity: 1; transform: translateY(0); }
     }
 
-.imgs-proyect{
-    
-} 
-
 .h2-proyect{
     text-align: center;
 }
@@ -753,5 +749,12 @@ button.nextt:hover {
 
     .modal-content{
         font-size: small;
+    }
+
+    .modal-content {
+    margin: 50% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
     }
     }
